refactor: merge MOOffer into TAApplication and simplify application status flow